HistoricActivity Completed Bug with Draw resolved When the game ends, the activty now is finished

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -25,4 +25,5 @@
     <string name="pontuacao">Score:</string>
     <string name="nome_jogador">Player Name:</string>
     <string name="modo_de_jogo">Game Mode:</string>
+    <string name="historico_de_jogos">Game Historic</string>
 </resources>
