--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -25,4 +25,5 @@
     <string name="nome_jogador">Nome Jogador:</string>
     <string name="pontuacao">Pontuação:</string>
     <string name="tempo">Tempo:</string>
+    <string name="historico_de_jogos">Histórico de Jogos</string>
 </resources>
