--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Four In Row</string>
-    <string name="carregar_jogo">Carregar Jogo</string>
+    <string name="carregar_jogo">Carregar Último Jogo</string>
     <string name="comecar_jogo">Começar Jogo</string>
     <string name="cr_ditos">Créditos</string>
     <string name="dois_jogadores_local">Dois Jogadores - Local</string>
@@ -26,4 +26,6 @@
     <string name="pontuacao">Pontuação:</string>
     <string name="tempo">Tempo:</string>
     <string name="historico_de_jogos">Histórico de Jogos</string>
+    <string name="ganhou">Ganhou:</string>
+    <string name="perdeu">Perdeu:</string>
 </resources>
