When game is ended and the dialog box appears and the user click out off dialog box, now the current activity is finished.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -28,4 +28,5 @@
     <string name="historico_de_jogos">Game Historic</string>
     <string name="ganhou">Win:</string>
     <string name="perdeu">Lose:</string>
+    <string name="amarelo">Yellow</string>
 </resources>
