--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -28,4 +28,5 @@
     <string name="historico_de_jogos">Histórico de Jogos</string>
     <string name="ganhou">Ganhou:</string>
     <string name="perdeu">Perdeu:</string>
+    <string name="amarelo">Amarelo</string>
 </resources>
